--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .vscode/
 
 # Ignore Python cache files
+__pycache__/
 **/__pycache__/
 *.pyc
 *.py[cod]
@@ -12,5 +13,3 @@
 # Optional: Ignore temporary files
 *.log
 *.tmp
-
-img/.references/
